<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                style="@style/BaseApp.Heading"
                android:text="@string/add_your_name"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/firstNameMET"
                style="@style/METAuthField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="text|textCapWords|textNoSuggestions|textPersonName"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/lastNameMET"
                style="@style/METAuthField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapWords|textNoSuggestions|textPersonName"
                android:hint="@string/hint_last_name"
                android:imeOptions="actionDone"/>


        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/white"
        android:src="@drawable/ic_arrow_forward_black_24dp"/>


</FrameLayout>
