<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/titleTV"
            style="@style/BaseApp.Heading"
            android:text="@string/updating_cost_estimate" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="@dimen/list_row_padding">

                <ke.co.toshngure.views.NetworkImage
                    android:id="@+id/avatarIV"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginBottom="@dimen/list_row_padding"
                    app:niCircled="false"
                    app:niSrc="@drawable/pick_up" />

                <TextView
                    android:id="@+id/nameTV"
                    style="@style/BaseApp.Heading"
                    android:layout_width="wrap_content"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/volumeDetailsTV"
                    style="@style/BaseApp.Body"
                    android:layout_width="wrap_content"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/volumeTV"
                    style="@style/BaseApp.Body"
                    android:layout_width="wrap_content"
                    android:text="@string/app_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/BaseApp.Heading"
                    android:layout_width="wrap_content"
                    android:text="@string/new_estimated_cost" />

                <TextView
                    android:id="@+id/costTV"
                    style="@style/BaseApp.Body"
                    android:gravity="center"
                    android:text="@string/message_waiting"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            </LinearLayout>

        </LinearLayout>

        <ke.co.toshngure.views.ToshTextView
            style="@style/BaseApp.Body"
            android:drawableLeft="@drawable/ic_info_black_16dp"
            android:drawablePadding="@dimen/list_row_padding"
            android:text="@string/cost_estimate_warning"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:tint="@android:color/holo_red_light"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:enabled="true"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:text="@android:string/cancel" />


        <Button
            android:id="@+id/acceptBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:enabled="false"
            android:text="@string/accept_new_cost_estimate" />
    </LinearLayout>


</LinearLayout>
