<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ke.co.thinksynergy.movers.activity.ConfirmPickUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/pin"
                android:tint="?attr/colorAccent"
                android:contentDescription="@string/app_name" />

        </fragment>

        <Button
            android:id="@+id/confirmBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            android:text="@string/confirm_pickup"
            android:layout_margin="@dimen/list_row_padding"/>

        <FrameLayout
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp">
            <android.support.v7.widget.CardView
                style="@style/CardViewContainer"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/list_row_padding">

                    <TextView
                        style="@style/BaseApp.Heading"
                        android:text="@string/confirm_your_pickup"
                        android:layout_marginBottom="@dimen/list_row_padding"/>


                    <ke.co.toshngure.views.LineView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>


                    <ke.co.toshngure.views.ToshTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/list_row_padding"
                        android:text="@string/move_pin_to_adjust_pickup_location"
                        android:drawableLeft="@drawable/ic_info_black_16dp"
                        android:drawablePadding="@dimen/list_row_padding"
                        app:tint="?attr/colorAccent"
                        tools:ignore="RtlHardcoded" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingRight="0dp"
                        tools:ignore="RtlHardcoded">

                        <EditText
                            android:id="@+id/originET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:background="@android:color/transparent"
                            android:inputType="none"
                            android:visibility="visible"
                            android:textColor="@android:color/black"
                            android:text="@string/ask_for_transport" />

                        <TextView
                            android:id="@+id/loadingTV"
                            style="@style/BaseApp.Body"
                            android:text="@string/message_waiting"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            android:textSize="18sp"/>

                    </FrameLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </FrameLayout>

    </FrameLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
